--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <h1><img src="img/logo.png" alt="site de produtos"></h1>
             <nav class="menu">
                 <a href="#">HOME</a>
-                <a href="#">PRODUTOS</a>
-                <a href="#">CONTATO</a>
+                <a href="#titulo-produtos">PRODUTOS</a>
+                <a href="#contato">CONTATO</a>
             </nav>
         </header>
         <div class="banner">
             <img src="img/seta-esquerda.png" alt="seta esquerda">
             <img src="img/seta-direita.png" alt="seta direita">
         </div>
-        <div class="produtos">
+        <div class="produtos" id="titulo-produtos">
             <h2 class="titulo">PRODUTOS</h2>
             <div class="linha">
                 <div class="coluna">
@@ -51,6 +51,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="contato" id="contato">
+                    <h2 class="titulo">CONTATO</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.328528276568!2d-47.32909399999999!3d-22.753186099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1715293628060!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <footer class="rodape">
+                    <img src="img/logo.png" alt="logotipo">
+                    <a href="https://instagram.com"><img src="img/instagram.png" alt="instagram"></a>
+                </footer>
     </main>
 </body>
 
